# prefect-trading-demo

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SIMPLIFIED_SUMMARY.md  prefect.yaml  pyproject.toml  run_demo.py  spx_hourly.parquet  vix_hourly.parquet
docs/: ALGORITHM.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  K8S_SETUP.md  MULTI_LAYER_ARCHITECTURE.md  QUICKSTART.md  TROUBLESHOOTING.md
flows/: __init__.py  aggregate_portfolio_flow.py  analyze_symbol_flow.py  ingest_market_data_flow.py  orchestrator_flow.py  test_local_flows.py  validate_data_flow.py
input/: generate_hourly_data.py  verify_hourly_data.py
scripts/: __init__.py  create_ecr_repo.py  create_s3_blocks.py  setup_s3_blocks.py  test_local.py  test_local_full.py  upload_data_to_s3.py
