[project]
name = "trading-partition-demo"
version = "0.1.0"
description = "Prefect trading partition demo with parallel K8s execution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prefect>=3.0.0",
    "prefect-aws>=0.5.0",
    "prefect-docker>=0.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "boto3>=1.28.0",
    "s3fs>=2023.0.0",
    "pytz>=2023.3",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows", "scripts"]
